[OVERALL FIXING] Fixed some issues related to Payment and Rental (#33)
* adjusted payment service

* added check data method

* reset default data

* fixed the problem with correct calculating of amount

* added scheduler service class and made minor adjustments

* reset default properties

* resolved conflict

* added cron param

* implemented beta scheduling

* updated from remote branch

* adjusted payment and scheduler

* fixed overall issues and adjusted payment process

* fixed mistakes